# fingerprint_access_system

./: .gitignore  Cargo.toml  README.md  memory.x  rust-toolchain.toml  shell.nix
.cargo/: config.toml
kikad/board/: #auto_saved_files#  _autosave-board.kicad_pcb  _autosave-board.kicad_sch  board.kicad_pcb  board.kicad_pro  board.kicad_sch  board.kicad_sch-bak  ~board.kicad_pcb.lck
src/: battery_monitoring_task.rs  beeper_task.rs  fingerprint_irq_task.rs  fingerprint_sensor.rs  fingerprint_task.rs  main.rs  unlock_task.rs
