[package]
name = "fingerprint-access-control"
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32g031k8",
    "unstable-pac",
    "memory-x",
    "time",
    "time-driver-any",
    "exti",
] }


embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "generic-queue",
] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-4096",
    "arch-cortex-m",
    "executor-thread",
] }

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"

# Logging and Debugging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

num_enum = { version = "0.7", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = false
opt-level = 's'

[[bin]]
name = "fingerprint-access-control"
test = false
bench = false
