[package]
name = "fingerprint-access-control"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt"]                                                    # Add "defmt" here to enable it by default
defmt = ["dep:defmt", "embassy-stm32/defmt", "embassy-executor/defmt"]

[dependencies]

defmt = { version = "1.1.0", optional = true }

embassy-stm32 = { version = "0.6.0", features = [
    "defmt",
    "stm32g031k8",
    "unstable-pac",
    "memory-x",
    "time",
    "time-driver-any",
    "exti",
] }


embassy-time = { version = "0.5.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "generic-queue-8",
] }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "nightly",
] }

embassy-sync = { version = "0.8.0", features = ["defmt"] }

embassy-futures = "0.1.2"

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"


defmt-rtt = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

num_enum = { version = "0.7.6", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = false
opt-level = 's'

[[bin]]
name = "fingerprint-access-control"
test = false
bench = false
